[project]
name = "api-mock-generator-agent"
version = "0.1.0"
description = "Automated Mock API Generator with Stateful Object Management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.12.10",
    "PyYAML>=6.0"
]

[project.scripts]
api-mock-generator = "main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = ["E501", "F401"]
